src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\ppl\assignment4\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", 
                     "';'", "':'", "'='", "'auto'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENT", "INLINE_COMMENT", "PLUS", 
                      "MINUS", "MULT", "DIV", "MOD", "NOT", "AND", "OR", 
                      "EQ", "NEQ", "LT", "LTEQ", "GT", "GTEQ", "STRCON", 
                      "LP", "RP", "LS", "RS", "LB", "RB", "DOT", "COMMA", 
                      "SEMI", "COL", "ASSIGN", "AUTO", "BREAK", "BOOLEAN", 
                      "DO", "ELSE", "FALSE", "FLOAT", "FOR", "FUNCTION", 
                      "IF", "INTEGER", "RETURN", "STRING", "TRUE", "WHILE", 
                      "VOID", "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", 
                      "ID", "INTLIT", "FLOATLIT", "STRINGLIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_funcDecl = 2
    RULE_varDecl = 3
    RULE_varDeclFull = 4
    RULE_idlist = 5
    RULE_param = 6
    RULE_paramPrime = 7
    RULE_paramlist = 8
    RULE_arglist = 9
    RULE_funcCall = 10
    RULE_dimensionlist = 11
    RULE_atomicTyp = 12
    RULE_arrayTyp = 13
    RULE_typ = 14
    RULE_operand = 15
    RULE_indexOp = 16
    RULE_signOp = 17
    RULE_logicalOp = 18
    RULE_multiplyingOp = 19
    RULE_addingOp = 20
    RULE_logicalBinaryOp = 21
    RULE_relationalOp = 22
    RULE_stringOp = 23
    RULE_expr = 24
    RULE_exprlist = 25
    RULE_stmt = 26
    RULE_blockStmtElement = 27
    RULE_blockStmtElements = 28
    RULE_blockStmt = 29
    RULE_assignmentStmt = 30
    RULE_ifStmt = 31
    RULE_elseStmt = 32
    RULE_forStmt = 33
    RULE_whileStmt = 34
    RULE_doWhileStmt = 35
    RULE_breakStmt = 36
    RULE_continueStmt = 37
    RULE_returnStmt = 38
    RULE_callStmt = 39
    RULE_typelit = 40
    RULE_arraylit = 41

    ruleNames =  [ "program", "decl", "funcDecl", "varDecl", "varDeclFull", 
                   "idlist", "param", "paramPrime", "paramlist", "arglist", 
                   "funcCall", "dimensionlist", "atomicTyp", "arrayTyp", 
                   "typ", "operand", "indexOp", "signOp", "logicalOp", "multiplyingOp", 
                   "addingOp", "logicalBinaryOp", "relationalOp", "stringOp", 
                   "expr", "exprlist", "stmt", "blockStmtElement", "blockStmtElements", 
                   "blockStmt", "assignmentStmt", "ifStmt", "elseStmt", 
                   "forStmt", "whileStmt", "doWhileStmt", "breakStmt", "continueStmt", 
                   "returnStmt", "callStmt", "typelit", "arraylit" ]

    EOF = Token.EOF
    WS=1
    COMMENT=2
    INLINE_COMMENT=3
    PLUS=4
    MINUS=5
    MULT=6
    DIV=7
    MOD=8
    NOT=9
    AND=10
    OR=11
    EQ=12
    NEQ=13
    LT=14
    LTEQ=15
    GT=16
    GTEQ=17
    STRCON=18
    LP=19
    RP=20
    LS=21
    RS=22
    LB=23
    RB=24
    DOT=25
    COMMA=26
    SEMI=27
    COL=28
    ASSIGN=29
    AUTO=30
    BREAK=31
    BOOLEAN=32
    DO=33
    ELSE=34
    FALSE=35
    FLOAT=36
    FOR=37
    FUNCTION=38
    IF=39
    INTEGER=40
    RETURN=41
    STRING=42
    TRUE=43
    WHILE=44
    VOID=45
    OUT=46
    CONTINUE=47
    OF=48
    INHERIT=49
    ARRAY=50
    ID=51
    INTLIT=52
    FLOATLIT=53
    STRINGLIT=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.decl()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.ID):
                    break

            self.state = 89
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.funcDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.varDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COL(self):
            return self.getToken(MT22Parser.COL, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockStmtContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcDecl




    def funcDecl(self):

        localctx = MT22Parser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(MT22Parser.ID)
            self.state = 96
            self.match(MT22Parser.COL)
            self.state = 97
            self.match(MT22Parser.FUNCTION)
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.VOID]:
                self.state = 98
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY]:
                self.state = 99
                self.typ()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 102
            self.match(MT22Parser.LP)
            self.state = 103
            self.paramlist()
            self.state = 104
            self.match(MT22Parser.RP)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 105
                self.match(MT22Parser.INHERIT)
                self.state = 106
                self.match(MT22Parser.ID)


            self.state = 109
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COL(self):
            return self.getToken(MT22Parser.COL, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def varDeclFull(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclFullContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varDecl




    def varDecl(self):

        localctx = MT22Parser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.idlist()
                self.state = 112
                self.match(MT22Parser.COL)
                self.state = 113
                self.typ()
                self.state = 114
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.varDeclFull()
                self.state = 117
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclFullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def varDeclFull(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclFullContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COL(self):
            return self.getToken(MT22Parser.COL, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varDeclFull




    def varDeclFull(self):

        localctx = MT22Parser.VarDeclFullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDeclFull)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(MT22Parser.ID)
                self.state = 122
                self.match(MT22Parser.COMMA)
                self.state = 123
                self.varDeclFull()
                self.state = 124
                self.match(MT22Parser.COMMA)
                self.state = 125
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(MT22Parser.ID)
                self.state = 128
                self.match(MT22Parser.COL)
                self.state = 129
                self.typ()
                self.state = 130
                self.match(MT22Parser.ASSIGN)
                self.state = 131
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(MT22Parser.ID)
                self.state = 136
                self.match(MT22Parser.COMMA)
                self.state = 137
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COL(self):
            return self.getToken(MT22Parser.COL, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 141
                self.match(MT22Parser.INHERIT)


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 144
                self.match(MT22Parser.OUT)


            self.state = 147
            self.match(MT22Parser.ID)
            self.state = 148
            self.match(MT22Parser.COL)
            self.state = 149
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def paramPrime(self):
            return self.getTypedRuleContext(MT22Parser.ParamPrimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramPrime




    def paramPrime(self):

        localctx = MT22Parser.ParamPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramPrime)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.param()
                self.state = 152
                self.match(MT22Parser.COMMA)
                self.state = 153
                self.paramPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramPrime(self):
            return self.getTypedRuleContext(MT22Parser.ParamPrimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramlist)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.paramPrime()
                pass
            elif token in [MT22Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArglistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arglist




    def arglist(self):

        localctx = MT22Parser.ArglistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arglist)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.MINUS, MT22Parser.NOT, MT22Parser.LP, MT22Parser.LB, MT22Parser.FALSE, MT22Parser.TRUE, MT22Parser.ID, MT22Parser.INTLIT, MT22Parser.FLOATLIT, MT22Parser.STRINGLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.exprlist()
                pass
            elif token in [MT22Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def arglist(self):
            return self.getTypedRuleContext(MT22Parser.ArglistContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcCall




    def funcCall(self):

        localctx = MT22Parser.FuncCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MT22Parser.ID)
            self.state = 167
            self.match(MT22Parser.LP)
            self.state = 168
            self.arglist()
            self.state = 169
            self.match(MT22Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimensionlist(self):
            return self.getTypedRuleContext(MT22Parser.DimensionlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensionlist




    def dimensionlist(self):

        localctx = MT22Parser.DimensionlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dimensionlist)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(MT22Parser.INTLIT)
                self.state = 172
                self.match(MT22Parser.COMMA)
                self.state = 173
                self.dimensionlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicTypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomicTyp




    def atomicTyp(self):

        localctx = MT22Parser.AtomicTypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_atomicTyp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)

        def dimensionlist(self):
            return self.getTypedRuleContext(MT22Parser.DimensionlistContext,0)


        def RS(self):
            return self.getToken(MT22Parser.RS, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomicTyp(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayTyp




    def arrayTyp(self):

        localctx = MT22Parser.ArrayTypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arrayTyp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(MT22Parser.ARRAY)
            self.state = 180
            self.match(MT22Parser.LS)
            self.state = 181
            self.dimensionlist()
            self.state = 182
            self.match(MT22Parser.RS)
            self.state = 183
            self.match(MT22Parser.OF)
            self.state = 184
            self.atomicTyp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomicTyp(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def arrayTyp(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_typ




    def typ(self):

        localctx = MT22Parser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_typ)
        try:
            self.state = 189
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.atomicTyp()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 3)
                self.state = 188
                self.arrayTyp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typelit(self):
            return self.getTypedRuleContext(MT22Parser.TypelitContext,0)


        def ID(self):
            return self.getToken(MT22Parser.ID, 0)
